Further URL changes

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,9 +21,7 @@
 title: Your awesome title
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  In this tutorial we will walk through the process of creating a YubiEnterpriseDelivery API workflow in ServiceNow and focus on adding a YubiKey to the service catalog and sending a shipment request to YubiEnterpriseDelivery when the user checks out of their cart.
 baseurl: "/yed-spoke-example" # the subpath of your site, e.g. /blog
 url: "https://yubicolabs.github.io/yed-spoke-example" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
